--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,29 @@
+@font-face {
+  font-family: "PT Sans";
+  font-style: Regular;
+  font-weight: 400;
+  src: url("../fonts/ptsans-400.woff2") format("woff2");
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "PT Sans";
+  font-style: Bold;
+  font-weight: 700;
+  src: url("../fonts/ptsans-700.woff2") format("woff2");
+  font-display: swap;
+}
+
 body {
-  background-color: tomato;
+  font-family: "PT Sans" sans-serif;
+  font-size: 18px;
+  line-height: 36px;
+  color: #000000;
+  background-color: #FFFFFF;
+}
+
+.hero {
+  background-image: url("../images/index-background.jpg");
+  background-size: 1200px 485px;
+  background-repeat: no-repeat;
 }
