--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "PT Sans";
-  font-style: Regular;
+  font-style: normal;
   font-weight: 400;
   src: url("../fonts/ptsans-400.woff2") format("woff2");
   font-display: swap;
@@ -8,14 +8,14 @@
 
 @font-face {
   font-family: "PT Sans";
-  font-style: Bold;
+  font-style: normal;
   font-weight: 700;
   src: url("../fonts/ptsans-700.woff2") format("woff2");
   font-display: swap;
 }
 
 body {
-  font-family: "PT Sans" sans-serif;
+  font-family: "PT Sans", sans-serif;
   font-size: 18px;
   line-height: 36px;
   color: #000000;
