--- a/styles/styles.css
+++ b/styles/styles.css
@@ -24,8 +24,6 @@ html {
 }
 
 body {
-  display: flex;
-  flex-direction: column;
   min-height: 100%;
   margin: 0;
   font-family: "PT Sans", sans-serif;
@@ -35,25 +33,64 @@ body {
   background-color: #FFFFFF;
 }
 
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  border: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 .main-container {
   flex-grow: 1;
 }
 
-.navigation {
-  display: flex;
-  width: 1200px;
-  margin: 0 auto;
-}
-
-.navigation-list {
-  width: 1200px;
+.page-header {
   margin: 0;
   padding: 0;
 }
 
+.navigation {
+  display: grid;
+  grid-template-columns: 5px 1fr 1fr;
+  column-gap: 150px;
+  align-items: center;
+}
+
+.navigation-list {
+  display: flex;
+  margin: 0;
+  padding: 0;
+  justify-content: space-between;
+  list-style-type: none;
+}
+
 .navigation-user {
-  max-width: 250px;
-  margin-left: auto;
+  display: flex;
+  margin: 0;
+  padding: 0;
+  justify-content: space-between;
+}
+
+.navigation-link {
+  display: block;
+  padding: 24px 19px;
+  font-family: "PT Sans", sans-serif;
+  line-height: 24px;
+  font-weight: 700;
+  text-align: center;
+  color: #000000;
+  background-color: #ffffff;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+.navigation-user .navigation-link {
+  min-width: 16px;
+  min-height: 22px;
 }
 
 .page-container {
@@ -72,7 +109,6 @@ body {
 
 .advantages-list {
   display: flex;
-  flex-direction: row;
   margin: 0;
   padding: 0;
   font-family: "PT Sans", sans-serif;
@@ -88,14 +124,14 @@ body {
   flex-wrap: wrap;
 }
 
-.advantages-item {
-  display: flex;
-}
+.advantages-item {}
 
 .hero {
   background-image: url("../images/index-background.jpg");
-  background-size: 1200px 485px;
+  background-size: cover;
   background-repeat: no-repeat;
+  text-align: center;
+  margin-bottom: 82px;
 }
 
 .hero-logo {
@@ -111,4 +147,9 @@ body {
   text-align: center;
   color: #333333;
   background-color: #ffffff;
+  margin-bottom: 90px;
+}
+
+.about-list {
+  list-style-type: none;
 }
