--- a/styles/styles.css
+++ b/styles/styles.css
@@ -80,8 +80,8 @@ body {
   line-height: 64px;
   font-weight: 700;
   text-align: center;
-  color: #000000;
-  background-color: #ffffff;
+  color: #000;
+  background-color: #fff;
   text-decoration: none;
   text-transform: uppercase;
 }
@@ -102,13 +102,19 @@ body {
 
 .hero {
   display: flex;
-  align-items: center;
+  align-items: flex-end;
   justify-content: center;
   min-height: 485px;
   background-image: url("../images/index-background.jpg");
   background-size: cover;
   background-repeat: no-repeat;
-  text-align: center;
+  flex-wrap: wrap;
+}
+
+.hero-logo-container {}
+
+.hero-logo-item {
+  margin-bottom: -3px;
 }
 
 .about {
@@ -118,8 +124,8 @@ body {
   min-height: 282px;
   font-family: "PT Sans", sans-serif;
   font-style: normal;
-  color: #333333;
-  background-color: #ffffff;
+  color: #333;
+  background-color: #fff;
 }
 
 .about-list {
@@ -220,4 +226,153 @@ body {
   line-height: 20px;
   font-weight: 400;
   text-align: center;
+}
+
+.invitation {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 406px;
+  margin: 0;
+  padding: 0;
+  font-family: "PT Sans", sans-serif;
+  font-style: normal;
+  color: #333;
+  background-color: #fff;
+}
+
+.invitation-title {
+  font-family: "PT Sans", sans-serif;
+  font-size: 30px;
+  line-height: 36px;
+  font-weight: 700;
+  text-align: center;
+  color: #000;
+}
+
+.invitation-description {
+  font-family: "PT Sans", sans-serif;
+  font-size: 22px;
+  line-height: 26px;
+  font-weight: 400;
+  text-align: center;
+  color: #333;
+}
+
+.invitation-link-container {
+  line-height: 36px;
+  text-align: center;
+}
+
+.invitation-link {
+  font-family: "PT Sans", sans-serif;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 20px;
+  font-weight: 700;
+  color: #000;
+}
+
+.newsletter {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 414.86px;
+  margin: 0;
+  padding: 0;
+  font-family: "PT Sans", sans-serif;
+  font-style: normal;
+  color: #fff;
+  background-image: url("../images/subscribe_image.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  text-align: center;
+}
+
+.page-footer-title {
+  font-family: "PT Sans", sans-serif;
+  font-size: 30px;
+  line-height: 36px;
+  font-weight: 700;
+  text-align: center;
+  color: #fff;
+}
+
+.page-footer-description {
+  font-family: "PT Sans", sans-serif;
+  font-size: 22px;
+  line-height: 26px;
+  font-weight: 400;
+  text-align: center;
+  color: #fff;
+}
+
+.footer-contacts-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  min-height: 120px;
+  padding: 0 70px;
+}
+
+.footer-contacts-address-phone {
+  font-family: "PT Sans", sans-serif;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-style: normal;
+  font-size: 40px;
+  font-weight: 400;
+  color: #000;
+}
+
+.inner-header-title {
+  font-family: "PT Sans", sans-serif;
+  font-size: 60px;
+  line-height: 78px;
+  font-weight: 700;
+  color: #fff;
+  padding: 35px 70px 0;
+  margin: 0;
+  text-align: start;
+  width: 494.4px;
+}
+
+.catalog-hero {
+  min-height: 412px;
+  background-image: url("../images/catalog-background.jfif");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.breadcrumbs {
+  display: flex;
+  padding: 0 70px;
+}
+
+.catalog-filter-container {
+
+  align-items: center;
+  justify-content: space-around;
+}
+
+.catalog-filter-list {
+  list-style-type: none;
+}
+
+.accommodation-card-container {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.accommodation-card {
+  display: inline-block;
+  padding: 10px;
+  margin: 10px;
+}
+
+.pagination {
+  display: flex;
+  list-style-type: none;
 }
