--- a/styles/styles.css
+++ b/styles/styles.css
@@ -47,23 +47,34 @@ body {
 
 .page-header {
   display: flex;
+  align-items: flex-start;
   justify-content: space-between;
   padding: 0 70px;
   margin-bottom: -10px;
+  background-color: #fff;
 }
 
 .navigation {
   display: flex;
   align-items: center;
+  align-content: flex-start;
+  position: relative;
+  margin-left: 200px;
+}
+
+.logo {
+  position: absolute;
+  left: -100px;
 }
 
 .navigation-list {
   display: flex;
   margin: 0;
   padding: 0;
-  justify-content: space-between;
+  align-items: center;
   list-style-type: none;
   margin-bottom: 10px;
+  background-color: #fff;
 }
 
 .navigation-user {
@@ -71,42 +82,78 @@ body {
   margin: 0;
   padding: 0;
   justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10px;
 }
 
 .navigation-link {
   display: block;
-  padding: 0 20px;
   font-family: "PT Sans", sans-serif;
+  font-size: 20px;
   line-height: 64px;
   font-weight: 700;
   text-align: center;
   color: #000;
+  text-decoration: none;
+  margin-right: 32px;
+}
+
+.navigation-link-user-search {
+  display: flex;
+  align-items: center;
   background-color: #fff;
   text-decoration: none;
-  text-transform: uppercase;
-}
-
-.navigation-user .navigation-link {
-  min-width: 16px;
-  min-height: 22px;
-}
-
-.navigation-user .navigation-item:nth-child(1) .navigation-link {
+  width: 44px;
+  height: 64px;
   background-image: url("../images/search.svg");
   background-repeat: no-repeat;
   background-position: center;
 }
 
-.navigation-user .navigation-item:nth-child(2) .navigation-link {
+.navigation-link-user-like {
+  display: flex;
+  align-items: center;
+  background-color: #fff;
+  text-decoration: none;
+  width: 44px;
+  height: 64px;
   background-image: url("../images/heart.svg");
   background-repeat: no-repeat;
   background-position: center;
 }
 
-/* .navigation-item {
+.navigation-item-user-search {
+  width: 44px;
+  height: 64px;
+}
+
+.navigation-item-user-like {
+  width: 44px;
+  height: 64px;
+}
+
+.navigation-item-user-button {
   display: flex;
+  justify-content: center;
   align-items: center;
-} */
+  width: 160px;
+  height: 36px;
+  background-color: #756157;
+  margin-left: 20px;
+  padding: 0;
+  border-radius: 4px;
+}
+
+.navigation-link-user-button {
+  display: block;
+  font-family: "PT Sans", sans-serif;
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 700;
+  text-align: center;
+  color: #FFF;
+  text-decoration: none;
+}
 
 .main-container {
   flex-grow: 1;
@@ -220,13 +267,76 @@ body {
 }
 
 .advantages-item {
-  display: inline-block;
+  display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
   width: 400px;
-  min-height: 384px;
+  height: 384px;
   margin: 0;
   padding: 0;
+  background-image: url("../images/Rectangle\ 125.png");
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.fourth-line {
+  justify-content: center;
+}
+
+.line-photo {
+  width: 800px;
+  height: 384px;
+}
+
+.second-line {
+  background-image: url("../images/Rectangle\ 125\ grey.png");
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.second-line-background-color {
+  background-color: rgba(131, 179, 211, 0.2);
+}
+
+.second-line-background-color-one {
+  background-color: rgba(131, 179, 211, 0.12)
+}
+
+.fourth-line-housing-logo {
+  width: 80px;
+  height: 80px;
+  background-image: url("../images/advantage_housing.svg");
+  background-repeat: no-repeat;
+  justify-content: center;
+}
+
+.fourth-line-housing {
+  background-color: rgba(131, 179, 211, 0.2);
+}
+
+.fourth-line-food {
+  background-color: #FFF;
+}
+
+.fourth-line-souvenirs {
+  background-color: rgba(131, 179, 211, 0.2);
+}
+
+.fourth-line-food-logo {
+  width: 80px;
+  height: 80px;
+  background-image: url("../images/advantages_food.svg");
+  background-repeat: no-repeat;
+  justify-content: center;
+}
+
+.fourth-line-souvenirs-logo {
+  width: 80px;
+  height: 80px;
+  background-image: url("../images/advantage_souvenirs.svg");
+  background-repeat: no-repeat;
+  justify-content: center;
 }
 
 .advantages-title {
@@ -235,6 +345,19 @@ body {
   line-height: 28px;
   font-weight: 700;
   text-align: center;
+  margin: 0 auto;
+}
+
+.advantages-title-housing {
+  margin: 30px 0 30px;
+}
+
+.advantages-title-food {
+  margin: 31px 0 30px;
+}
+
+.advantages-title-souvenirs {
+  margin: 28px 0 30px;
 }
 
 .advantages-description {
@@ -243,10 +366,12 @@ body {
   line-height: 20px;
   font-weight: 400;
   text-align: center;
+  margin: 0 auto;
 }
 
 .invitation {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   min-height: 406px;
@@ -265,6 +390,7 @@ body {
   font-weight: 700;
   text-align: center;
   color: #000;
+  margin: 0;
 }
 
 .invitation-description {
@@ -274,11 +400,18 @@ body {
   font-weight: 400;
   text-align: center;
   color: #333;
+  margin: 20px 0 54px;
 }
 
 .invitation-link-container {
-  line-height: 36px;
-  text-align: center;
+  display: flex;
+  width: 376px;
+  height: 52px;
+  background-color: #756157;
+  border-radius: 4px;
+  justify-content: center;
+  align-items: center;
+  margin-right: 0;
 }
 
 .invitation-link {
@@ -287,7 +420,8 @@ body {
   text-transform: uppercase;
   font-size: 20px;
   font-weight: 700;
-  color: #000;
+  color: #FFF;
+  text-align: center;
 }
 
 .newsletter {
@@ -306,6 +440,44 @@ body {
   text-align: center;
 }
 
+.newsletter-catalog {
+  background-image: none;
+}
+
+.newsletter-form {
+  display: flex;
+}
+
+.field {
+  width: 452px;
+  height: 52px;
+  margin: 0;
+  padding: 0 20px;
+  border-radius: 4px 0 0 4px;
+  border: none;
+  font-family: "PT Sans", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  color: #000;
+  background-color: #F2F2F2;
+}
+
+.newsletter-button {
+  width: 232px;
+  height: 52px;
+  background-color: #82B3D3;
+  font-family: "PT Sans", sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  color: #FFF;
+  border-radius: 0 4px 4px 0;
+  border: none;
+  margin: 0;
+  padding: 0;
+}
+
 .page-footer-title {
   font-family: "PT Sans", sans-serif;
   font-size: 30px;
@@ -315,6 +487,10 @@ body {
   color: #fff;
 }
 
+.page-footer-title-catalog {
+  color: #000;
+}
+
 .page-footer-description {
   font-family: "PT Sans", sans-serif;
   font-size: 22px;
@@ -322,6 +498,12 @@ body {
   font-weight: 400;
   text-align: center;
   color: #fff;
+  margin: 20px 0 54px;
+}
+
+.page-footer-description-catalog {
+  color: #333;
+
 }
 
 .footer-contacts-container {
@@ -331,6 +513,8 @@ body {
   min-height: 120px;
   padding: 0 70px;
 }
+
+/* Иконки социальных сетей */
 
 .footer-social-list {
   display: flex;
@@ -342,10 +526,7 @@ body {
 
 .footer-social-item {
   outline-offset: -5px;
-  width: 56px;
-  height: 44px;
-  margin-right: 8px;
-  margin-bottom: 8px;
+  outline: 5px;
 }
 
 .footer-social-item:nth-child(3n) {
@@ -353,36 +534,51 @@ body {
 }
 
 .footer-social-link {
-  display: block;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: 16px 16px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 56px;
+  height: 44px;
+  background-color: #FFF;
 }
 
-.footer-social-vk {
-  background-image: url("../images/social-vk.svg");
+.footer-social-icon {
+  position: absolute;
+  fill: #242424;
 }
 
-.footer-social-tg {
-  background-image: url("../images/social-telegram.svg");
-}
-
-.footer-social-yt {
-  background-image: url("../images/social-youtube.svg");
+.footer-social-link:focus .footer-social-icon {
+  fill: #242424;
 }
 
 .footer-contacts-address-phone {
-  font-family: "PT Sans", sans-serif;
-  text-decoration: none;
-  text-transform: uppercase;
-  font-style: normal;
-  font-size: 40px;
-  font-weight: 400;
-  color: #000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.htmlacademy-link {
-  background-image: url("../images/logo_htmlacademy.svg");
+.footer-social-link:hover path {
+  fill: #68A2CA;
+}
+
+.footer-social-link:active svg {
+  opacity: 0.3;
+}
+
+.footer-contacts-address-phone:hover path {
+  fill: #756157;
+}
+
+.footer-contacts-address-phone:active svg {
+  opacity: 0.3;
+}
+
+.htmlacademy-icon:hover path {
+  fill: #756157;
+}
+
+.htmlacademy-icon:active svg {
+  opacity: 0.3;
 }
 
 /* Секция Каталога Герой */
